<Added><Grant flow for the graphs, toggle for normalizing the axis scale(this helps with the total vs refined view), added basic bar graph for money><TODO><Shift click aggregation, Fixing the bar graphs also supporting normalized axis bar graphs, Click and drag graphs to normalize entire views.>

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -110,7 +110,7 @@ input:checked + .slider:before {
   stroke: steelblue;
 }
 
-.btn-primary.animate {
+.shake {
   animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
   transform: translate3d(0, 0, 0);
   backface-visibility: hidden;
@@ -125,18 +125,18 @@ input:checked + .slider:before {
 
   20%,
   80% {
-    transform: translate3d(2px, 0, 0);
+    transform: translate3d(1px, 0, 0);
   }
 
   30%,
   50%,
   70% {
-    transform: translate3d(-4px, 0, 0);
+    transform: translate3d(-1px, 0, 0);
   }
 
   40%,
   60% {
-    transform: translate3d(4px, 0, 0);
+    transform: translate3d(1px, 0, 0);
   }
 }
 
